--- a/RandomYoutubeVideo/wwwroot/css/site.css
+++ b/RandomYoutubeVideo/wwwroot/css/site.css
@@ -1,34 +1,124 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+body {
+    background: linear-gradient(lightgrey, black);
+    overflow:hidden;
 }
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+
+
+.lights-continer {
+    z-index: -1;
+    position: absolute;
+    
+    width: 100vw;
+    height: 100vh;
+    
+    display: inline-grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    overflow:hidden;
+}
+.light {
+    width: 20vw;
+    height: 100vh;
+    
+}
+    .light::after {
+        content: "";
+        display: block;
+        width: 40vw;
+        height: 100vh;
+        background: radial-gradient(ellipse farthest-side at top,white, transparent 100%);
+    }
+
+
+Logo-wraper{
+
+}
+.Logo-wraper h2 {
+    text-align: center;
+    font-family:Arial;
+}
+.Logo-wraper img{
+    position:relative;
+    top:-2px;
+    width: 80px;
+    height: auto;
+}
+Logo-wreaper span{
+    font-style:italic;
+    
+    font-size:1.7rem;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.container {
+   position:relative;
+    width:100vw;
+    left:0;
+
+
+
+}
+iframe {
+    grid-column: 3;
+    width: 50vw;
+    height: 50vh;
+    border: none;
+
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+
+.Viver-continer {
+    display: grid;
+    grid-template-columns: 20px 1fr 1fr 1fr 20px;
+    border: 1px solid black;
+    border-radius: 10px 10px 0px 0px;
+    border-bottom: 2px solid white;
+    border-top: 2px double black;
+    position: relative;
+    background: linear-gradient(to right,rgba(0,0,0,0.1),transparent), linear-gradient(to left,rgba(0,0,0,0.1),transparent);
 }
 
-/* Sticky footer styles
+.button_nextVideo{
+    position:relative;
+   
+    top:4vh;
+    width:100%;
+    height:100px;
+    
+    
+    transition:all 0.1s;
+
+}
+#PopcornBox {
+    max-width: 100%;
+    position: absolute;
+    transition: all 1s;
+    left:40%;
+    top:0;
+}
+
+.img_hovered {
+    transition: all 1s;
+}
+.img_reset {
+    transition: all 1s;
+}
+
+
+
+.NextVideo {
+    position: absolute;
+    text-align: center;
+    top: 0;
+    left: 32%;
+    pointer-events: none;
+}
+    /* Sticky footer styles
 -------------------------------------------------- */
-html {
-  font-size: 14px;
-}
+    html {
+        font-size: 14px;
+    }
 @media (min-width: 768px) {
   html {
     font-size: 16px;
