Adding sample 1470 YoutubeID's

--- a/RandomYoutubeVideo/Views/Home/Index.cshtml
+++ b/RandomYoutubeVideo/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
     <div class="Viver-continer">
 
-        <iframe 
+        <iframe id="Myiframe"
                 src="https://www.youtube.com/embed/tgbNymZ7vqY">
         </iframe>
 
