--- a/RandomYoutubeVideo/Views/Admin/Index.cshtml
+++ b/RandomYoutubeVideo/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model RandomYoutubeVideo.Models.AdminModel
 @{
     ViewData["Title"] = "Index";
 }
@@ -10,14 +10,15 @@
     <br />
 
 
-    <form style="border:2px solid black">
+    <form style="border:2px solid black" asp-action="SerachForNewIDS">
         <div class="form-group">
-            <label for="ApiKey" class="control-label">Api Key</label>
-            <input class="form-control-sm" accept="text" id="ApiKey" />
-
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <label asp-for="Api" for="ApiKey" class="control-label">Api Key</label>
+            <input asp-for="Api" class="form-control-sm" accept="text" id="ApiKey" />
+            <span asp-validation-for="Api" class="text-danger"></span>
             <br />
-            <label for="QuerrySelect">How many Querries?</label>
-            <select class="form-control-sm" id="QuerrySelect">
+            <label asp-for="NumberOfQuerrys" for="QuerrySelect">How many Querries?</label>
+            <select asp-for="NumberOfQuerrys" class="form-control-sm" id="QuerrySelect">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
@@ -28,11 +29,13 @@
                 <option>8</option>
                 <option>9</option>
                 <option>10</option>
-
+                <span asp-validation-for="NumberOfQuerrys" class="text-danger"></span>
             </select>
         </div>
         <div class="form-group">
-            <input type="submit" value="SerachForNewIDS" class="btn-warning btn-lg" />
+          <input type="submit" value="SerachForNewIDS" class="btn-warning btn-lg" />
         </div>
     </form>
+
+    <a asp-action="Import" class="btn-link">Import data from file</a>
 </div>
